manifests/ab-testing/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-server-v1
  namespace: ab-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web-server
      version: v1
  template:
    metadata:
      labels:
        app: go-web-server
        version: v1
    spec:
      containers:
      - name: go-web-server
        image: ghcr.io/clep-alexandru/web_go_application:bae5d51c2ca2b549fe6c683f7d36af0e15a52ffa
        ports:
        - containerPort: 8080
