manifests/ab-testing/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-server-v2
  namespace: ab-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web-server
      version: v2
  template:
    metadata:
      labels:
        app: go-web-server
        version: v2
    spec:
      containers:
        - name: go-web-server
          image: ghcr.io/clep-alexandru/web_go_application:fce16197c0b47cfe586e15fb276ab66557e5f4a8
          ports:
            - containerPort: 8080
