manifests/ab-testing/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ab-deployment
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
