manifests/ab-testing/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-server-v1
  namespace: ab-deployment
spec:
  type: NodePort
  selector:
    app: go-web-server
    version: v1
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30085
