manifests/ab-testing/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-server-v2
  namespace: ab-deployment
spec:
  type: NodePort
  selector:
    app: go-web-server
    version: v2
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30089
