manifests/ab-testing/ingress-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-server-ingress
  namespace: ab-deployment
spec:
  ingressClassName: nginx
  rules:
    - host: abtest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web-server-v1
                port:
                  number: 80
