manifests/ab-testing/ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-server-ingress-canary
  namespace: ab-deployment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - host: abtest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web-server-v2
                port:
                  number: 80
